[package]
name = "learning-rust"
version = "0.1.0"
authors = ["bernd.doser@braintwister.eu"]
edition = "2021"

[dependencies]
blas-src = { version = "0.9.0", features = ["openblas"] }
float-cmp = "0.9.0"
ndarray = { version = "0.15.6", features = ["blas"] }
openblas-src = { version = "0.10.8", features = ["cblas", "system"] }
ort = { version = "1.15.2", features = ["cuda", "tensorrt"] }
sprs = { version = "0.11.1" }
