[package]
name = "learning-rust"
version = "0.1.0"
authors = ["bernd.doser@braintwister.eu"]
edition = "2021"

[dependencies]
blas-src = { version = "0.10.0", features = ["openblas"] }
ndarray = { version = "0.15.6", features = ["blas"] }
openblas-src = { version = "0.10.8", features = ["cblas", "system"] }
sprs = { version = "0.11.1" }

[dev-dependencies]
float-cmp = "0.9.0"
ort = { version = "2.0.0-rc.0", features = ["cuda", "tensorrt", "fetch-models", "load-dynamic"] }
image = { version = "0.25.0"}

[[example]]
name = "onnx"
